# croissant

./: MLproject  README.md  conda.yaml  croissant_env.yaml  pytest.ini  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
croissant/: features.py  ingest.py  online_training.py  roi.py  schemas.py  train.py  utils.py
croissant/scripts/: annotation_ingest.py
deploy/cloudformation/: mlflow-db-template.yml
test/: conftest.py  test_features.py  test_ingest.py  test_online_training.py  test_schema.py  test_train.py  test_utils.py
test/resources/: dev_test_rois.json  dev_train_rois.json
test/scripts/: test_annotation_ingest.py
