[metadata]
name = croissant-ml
version = 0.0.3
description = "Classification of neurons segmented from two photon microscopy videos"
authors = ["Kat Schelonka, Isaak Willett, Dan Kapner, Nicholas Mei"]
author_email = kat.schelonka@alleninstitute.org
url = https://github.com/AllenInstitute/croissant

[options]
packages=find:
install_requires = 
    scikit-learn>=0.23.1
    numpy
    scipy
    scikit-image
    pandas>=1.0.0
    boto3
    argschema==2.0.2
    h5py
    jsonlines
    typing_extensions

[options.extras_require]
ALL =
    setuptools
    mlflow==2.3.1
    tables
    s3fs
    psycopg2-binary
    hyperopt
    hpsklearn
TEST =
    pytest
    pytest-cov
    moto
ONPREM = lims @ git+https://github.com/AllenInstitute/simple-lims-connection
